fix gap experience

--- a/src/components/experience/experience.scss
+++ b/src/components/experience/experience.scss
@@ -22,7 +22,7 @@
             display: grid;
             flex-direction: column;
             grid-template-columns: 1fr 1fr 1fr;
-            gap: 7%;
+            gap: 4%;
             padding: 24px;
             font-size: 18px;
 
